--- a/package.json
+++ b/package.json
@@ -3,15 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
-    "puppeteer": "^24.10.0"
+    "puppeteer-core": "^22.4.0",
+    "chromium": "^3.0.0"
   }
 }
